parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CTECHAR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID punto_programa COLON inicio
Rule 2     programa -> PROGRAMA ID punto_programa COLON dec_var_cycle inicio
Rule 3     programa -> PROGRAMA ID punto_programa COLON dec_var_cycle dec_func_cycle inicio
Rule 4     programa -> PROGRAMA ID punto_programa COLON dec_func_cycle inicio
Rule 5     dec_var_cycle -> dec_var dec_var_cycle
Rule 6     dec_var_cycle -> empty
Rule 7     dec_func_cycle -> dec_func dec_func_cycle
Rule 8     dec_func_cycle -> empty
Rule 9     punto_programa -> <empty>
Rule 10    inicio -> INICIO LPAREN RPAREN LBRACE estatutos_aux RBRACE SEMICOLON
Rule 11    dec_var -> simple_var
Rule 12    dec_var -> array
Rule 13    dec_var -> matrix
Rule 14    simple_var -> VARIABLE type ARROW ID punto_simple_var simpleVarCycle SEMICOLON
Rule 15    simpleVarCycle -> COMMA ID punto_simple_var simpleVarCycle
Rule 16    simpleVarCycle -> empty
Rule 17    punto_simple_var -> <empty>
Rule 18    type -> ENTERO
Rule 19    type -> DECIMAL
Rule 20    type -> LETRA
Rule 21    array -> RENGLON type ARROW ID LBRACKET CTEI RBRACKET punto_array arrayCycle SEMICOLON
Rule 22    arrayCycle -> COMMA ID LBRACKET CTEI RBRACKET punto_array arrayCycle
Rule 23    arrayCycle -> empty
Rule 24    punto_array -> <empty>
Rule 25    matrix -> TABLA type ARROW ID LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET punto_matrix matrixCycle SEMICOLON
Rule 26    matrixCycle -> COMMA ID LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET punto_matrix matrixCycle
Rule 27    matrixCycle -> empty
Rule 28    punto_matrix -> <empty>
Rule 29    dec_func -> FUNCION dec_func_type ID punto_add_func LPAREN parameter RPAREN LBRACE dec_var_cycle estatutos_aux dec_func_regresar RBRACE SEMICOLON
Rule 30    dec_func_regresar -> REGRESAR variable SEMICOLON
Rule 31    dec_func_regresar -> empty
Rule 32    dec_func_type -> type
Rule 33    dec_func_type -> SINREGRESAR
Rule 34    punto_add_func -> <empty>
Rule 35    parameter -> type ID punto_parameter parameterCycle
Rule 36    parameter -> empty
Rule 37    parameterCycle -> COMMA type ID punto_parameter parameterCycle
Rule 38    parameterCycle -> empty
Rule 39    punto_parameter -> <empty>
Rule 40    estatutos -> asignar
Rule 41    estatutos -> llamada_func
Rule 42    estatutos -> ciclo_for
Rule 43    estatutos -> ciclo_while
Rule 44    estatutos -> condicion
Rule 45    estatutos -> imprimir
Rule 46    estatutos -> leer
Rule 47    estatutos_aux -> estatutos estatutos_aux
Rule 48    estatutos_aux -> empty
Rule 49    asignar -> variable ASSIGN push_op_igual hyper_exp check_op_igual SEMICOLON
Rule 50    push_op_igual -> <empty>
Rule 51    check_op_igual -> <empty>
Rule 52    variable -> ID variable_aux
Rule 53    variable_aux -> LBRACKET exp RBRACKET
Rule 54    variable_aux -> LBRACKET exp RBRACKET LBRACKET exp RBRACKET
Rule 55    variable_aux -> empty
Rule 56    leer -> LEER variable SEMICOLON
Rule 57    ciclo_while -> MIENTRAS punto_inicio_while LPAREN hyper_exp RPAREN punto_medio_while LBRACE estatutos_aux RBRACE punto_fin_while SEMICOLON
Rule 58    punto_inicio_while -> <empty>
Rule 59    punto_medio_while -> <empty>
Rule 60    punto_fin_while -> <empty>
Rule 61    ciclo_for -> PORCADA exp EN exp LBRACE estatutos_aux RBRACE SEMICOLON
Rule 62    condicion -> SI LPAREN hyper_exp RPAREN punto_si LBRACE estatutos_aux RBRACE punto_fin_si sinoCondicion SEMICOLON
Rule 63    sinoCondicion -> SINO punto_sino LBRACE estatutos_aux RBRACE
Rule 64    sinoCondicion -> empty
Rule 65    punto_si -> <empty>
Rule 66    punto_fin_si -> <empty>
Rule 67    punto_sino -> <empty>
Rule 68    hyper_exp -> super_exp hyper_exp_aux
Rule 69    hyper_exp_aux -> push_op_logicos super_exp check_op_logicos
Rule 70    hyper_exp_aux -> empty
Rule 71    check_op_logicos -> <empty>
Rule 72    push_op_logicos -> Y
Rule 73    push_op_logicos -> O
Rule 74    push_op_logicos -> empty
Rule 75    super_exp -> exp super_exp_aux
Rule 76    super_exp_aux -> push_op_relacionales exp check_op_relacionales
Rule 77    super_exp_aux -> empty
Rule 78    check_op_relacionales -> <empty>
Rule 79    push_op_relacionales -> GREATER
Rule 80    push_op_relacionales -> LESS
Rule 81    push_op_relacionales -> GREATEREQ
Rule 82    push_op_relacionales -> LESSEQ
Rule 83    push_op_relacionales -> NOTEQUAL
Rule 84    push_op_relacionales -> EQUAL
Rule 85    push_op_relacionales -> empty
Rule 86    exp -> term check_op_masmenos exp_aux
Rule 87    exp_aux -> push_op_exp_masmenos exp
Rule 88    exp_aux -> empty
Rule 89    push_op_exp_masmenos -> PLUS
Rule 90    push_op_exp_masmenos -> MINUS
Rule 91    push_op_exp_masmenos -> empty
Rule 92    check_op_masmenos -> <empty>
Rule 93    term -> factor check_op_pordiv term_aux
Rule 94    term_aux -> push_op_exp_pordiv term
Rule 95    term_aux -> empty
Rule 96    check_op_pordiv -> <empty>
Rule 97    push_op_exp_pordiv -> TIMES
Rule 98    push_op_exp_pordiv -> DIVIDE
Rule 99    push_op_exp_pordiv -> empty
Rule 100   factor -> factor_constante
Rule 101   factor -> factor_variable
Rule 102   factor -> factor_expresion
Rule 103   factor_constante -> CTEI push_int
Rule 104   factor_constante -> CTEF push_float
Rule 105   factor_variable -> ID push_id
Rule 106   factor_variable -> ID LBRACKET hyper_exp RBRACKET
Rule 107   factor_variable -> ID LBRACKET hyper_exp RBRACKET LBRACKET hyper_exp RBRACKET
Rule 108   factor_variable -> ID llamada_func
Rule 109   factor_expresion -> LPAREN meter_fondo_falso hyper_exp RPAREN quitar_fondo_falso
Rule 110   meter_fondo_falso -> <empty>
Rule 111   quitar_fondo_falso -> <empty>
Rule 112   push_int -> <empty>
Rule 113   push_float -> <empty>
Rule 114   push_id -> <empty>
Rule 115   llamada_func -> ID LPAREN llamadaCYCLE RPAREN SEMICOLON
Rule 116   llamadaCYCLE -> hyper_exp llamadaCYCLE_aux
Rule 117   llamadaCYCLE -> empty
Rule 118   llamadaCYCLE_aux -> COMMA hyper_exp llamadaCYCLE_aux
Rule 119   llamadaCYCLE_aux -> empty
Rule 120   imprimir -> IMPRIMIR LPAREN imprimir_aux RPAREN SEMICOLON
Rule 121   imprimir_aux -> exp push_imprimir imprimirCycle
Rule 122   imprimir_aux -> CTESTRING push_imprimir imprimirCycle
Rule 123   imprimirCycle -> COMMA imprimir_aux
Rule 124   imprimirCycle -> empty
Rule 125   push_imprimir -> <empty>
Rule 126   empty -> <empty>

Terminals, with rules where they appear

ARROW                : 14 21 25
ASSIGN               : 49
COLON                : 1 2 3 4
COMMA                : 15 22 26 37 118 123
CTECHAR              : 
CTEF                 : 104
CTEI                 : 21 22 25 25 26 26 103
CTESTRING            : 122
DECIMAL              : 19
DIVIDE               : 98
EN                   : 61
ENTERO               : 18
EQUAL                : 84
FUNCION              : 29
GREATER              : 79
GREATEREQ            : 81
ID                   : 1 2 3 4 14 15 21 22 25 26 29 35 37 52 105 106 107 108 115
IMPRIMIR             : 120
INICIO               : 10
LBRACE               : 10 29 57 61 62 63
LBRACKET             : 21 22 25 25 26 26 53 54 54 106 107 107
LEER                 : 56
LESS                 : 80
LESSEQ               : 82
LETRA                : 20
LPAREN               : 10 29 57 62 109 115 120
MIENTRAS             : 57
MINUS                : 90
NOTEQUAL             : 83
O                    : 73
PLUS                 : 89
PORCADA              : 61
PROGRAMA             : 1 2 3 4
RBRACE               : 10 29 57 61 62 63
RBRACKET             : 21 22 25 25 26 26 53 54 54 106 107 107
REGRESAR             : 30
RENGLON              : 21
RPAREN               : 10 29 57 62 109 115 120
SEMICOLON            : 10 14 21 25 29 30 49 56 57 61 62 115 120
SI                   : 62
SINO                 : 63
SINREGRESAR          : 33
TABLA                : 25
TIMES                : 97
VARIABLE             : 14
Y                    : 72
error                : 

Nonterminals, with rules where they appear

array                : 12
arrayCycle           : 21 22
asignar              : 40
check_op_igual       : 49
check_op_logicos     : 69
check_op_masmenos    : 86
check_op_pordiv      : 93
check_op_relacionales : 76
ciclo_for            : 42
ciclo_while          : 43
condicion            : 44
dec_func             : 7
dec_func_cycle       : 3 4 7
dec_func_regresar    : 29
dec_func_type        : 29
dec_var              : 5
dec_var_cycle        : 2 3 5 29
empty                : 6 8 16 23 27 31 36 38 48 55 64 70 74 77 85 88 91 95 99 117 119 124
estatutos            : 47
estatutos_aux        : 10 29 47 57 61 62 63
exp                  : 53 54 54 61 61 75 76 87 121
exp_aux              : 86
factor               : 93
factor_constante     : 100
factor_expresion     : 102
factor_variable      : 101
hyper_exp            : 49 57 62 106 107 107 109 116 118
hyper_exp_aux        : 68
imprimir             : 45
imprimirCycle        : 121 122
imprimir_aux         : 120 123
inicio               : 1 2 3 4
leer                 : 46
llamadaCYCLE         : 115
llamadaCYCLE_aux     : 116 118
llamada_func         : 41 108
matrix               : 13
matrixCycle          : 25 26
meter_fondo_falso    : 109
parameter            : 29
parameterCycle       : 35 37
programa             : 0
punto_add_func       : 29
punto_array          : 21 22
punto_fin_si         : 62
punto_fin_while      : 57
punto_inicio_while   : 57
punto_matrix         : 25 26
punto_medio_while    : 57
punto_parameter      : 35 37
punto_programa       : 1 2 3 4
punto_si             : 62
punto_simple_var     : 14 15
punto_sino           : 63
push_float           : 104
push_id              : 105
push_imprimir        : 121 122
push_int             : 103
push_op_exp_masmenos : 87
push_op_exp_pordiv   : 94
push_op_igual        : 49
push_op_logicos      : 69
push_op_relacionales : 76
quitar_fondo_falso   : 109
simpleVarCycle       : 14 15
simple_var           : 11
sinoCondicion        : 62
super_exp            : 68 69
super_exp_aux        : 75
term                 : 86 94
term_aux             : 93
type                 : 14 21 25 32 35 37
variable             : 30 49 56
variable_aux         : 52

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID punto_programa COLON inicio
    (2) programa -> . PROGRAMA ID punto_programa COLON dec_var_cycle inicio
    (3) programa -> . PROGRAMA ID punto_programa COLON dec_var_cycle dec_func_cycle inicio
    (4) programa -> . PROGRAMA ID punto_programa COLON dec_func_cycle inicio

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID punto_programa COLON inicio
    (2) programa -> PROGRAMA . ID punto_programa COLON dec_var_cycle inicio
    (3) programa -> PROGRAMA . ID punto_programa COLON dec_var_cycle dec_func_cycle inicio
    (4) programa -> PROGRAMA . ID punto_programa COLON dec_func_cycle inicio

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . punto_programa COLON inicio
    (2) programa -> PROGRAMA ID . punto_programa COLON dec_var_cycle inicio
    (3) programa -> PROGRAMA ID . punto_programa COLON dec_var_cycle dec_func_cycle inicio
    (4) programa -> PROGRAMA ID . punto_programa COLON dec_func_cycle inicio
    (9) punto_programa -> .

    COLON           reduce using rule 9 (punto_programa -> .)

    punto_programa                 shift and go to state 4

state 4

    (1) programa -> PROGRAMA ID punto_programa . COLON inicio
    (2) programa -> PROGRAMA ID punto_programa . COLON dec_var_cycle inicio
    (3) programa -> PROGRAMA ID punto_programa . COLON dec_var_cycle dec_func_cycle inicio
    (4) programa -> PROGRAMA ID punto_programa . COLON dec_func_cycle inicio

    COLON           shift and go to state 5


state 5

    (1) programa -> PROGRAMA ID punto_programa COLON . inicio
    (2) programa -> PROGRAMA ID punto_programa COLON . dec_var_cycle inicio
    (3) programa -> PROGRAMA ID punto_programa COLON . dec_var_cycle dec_func_cycle inicio
    (4) programa -> PROGRAMA ID punto_programa COLON . dec_func_cycle inicio
    (10) inicio -> . INICIO LPAREN RPAREN LBRACE estatutos_aux RBRACE SEMICOLON
    (5) dec_var_cycle -> . dec_var dec_var_cycle
    (6) dec_var_cycle -> . empty
    (7) dec_func_cycle -> . dec_func dec_func_cycle
    (8) dec_func_cycle -> . empty
    (11) dec_var -> . simple_var
    (12) dec_var -> . array
    (13) dec_var -> . matrix
    (126) empty -> .
    (29) dec_func -> . FUNCION dec_func_type ID punto_add_func LPAREN parameter RPAREN LBRACE dec_var_cycle estatutos_aux dec_func_regresar RBRACE SEMICOLON
    (14) simple_var -> . VARIABLE type ARROW ID punto_simple_var simpleVarCycle SEMICOLON
    (21) array -> . RENGLON type ARROW ID LBRACKET CTEI RBRACKET punto_array arrayCycle SEMICOLON
    (25) matrix -> . TABLA type ARROW ID LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET punto_matrix matrixCycle SEMICOLON

  ! shift/reduce conflict for INICIO resolved as shift
  ! shift/reduce conflict for FUNCION resolved as shift
    INICIO          shift and go to state 9
    FUNCION         shift and go to state 16
    VARIABLE        shift and go to state 17
    RENGLON         shift and go to state 18
    TABLA           shift and go to state 19

  ! INICIO          [ reduce using rule 126 (empty -> .) ]
  ! FUNCION         [ reduce using rule 126 (empty -> .) ]

    inicio                         shift and go to state 6
    dec_var_cycle                  shift and go to state 7
    dec_func_cycle                 shift and go to state 8
    dec_var                        shift and go to state 10
    empty                          shift and go to state 11
    dec_func                       shift and go to state 12
    simple_var                     shift and go to state 13
    array                          shift and go to state 14
    matrix                         shift and go to state 15

state 6

    (1) programa -> PROGRAMA ID punto_programa COLON inicio .

    $end            reduce using rule 1 (programa -> PROGRAMA ID punto_programa COLON inicio .)


state 7

    (2) programa -> PROGRAMA ID punto_programa COLON dec_var_cycle . inicio
    (3) programa -> PROGRAMA ID punto_programa COLON dec_var_cycle . dec_func_cycle inicio
    (10) inicio -> . INICIO LPAREN RPAREN LBRACE estatutos_aux RBRACE SEMICOLON
    (7) dec_func_cycle -> . dec_func dec_func_cycle
    (8) dec_func_cycle -> . empty
    (29) dec_func -> . FUNCION dec_func_type ID punto_add_func LPAREN parameter RPAREN LBRACE dec_var_cycle estatutos_aux dec_func_regresar RBRACE SEMICOLON
    (126) empty -> .

  ! shift/reduce conflict for INICIO resolved as shift
    INICIO          shift and go to state 9
    FUNCION         shift and go to state 16

  ! INICIO          [ reduce using rule 126 (empty -> .) ]

    inicio                         shift and go to state 20
    dec_func_cycle                 shift and go to state 21
    dec_func                       shift and go to state 12
    empty                          shift and go to state 22

state 8

    (4) programa -> PROGRAMA ID punto_programa COLON dec_func_cycle . inicio
    (10) inicio -> . INICIO LPAREN RPAREN LBRACE estatutos_aux RBRACE SEMICOLON

    INICIO          shift and go to state 9

    inicio                         shift and go to state 23

state 9

    (10) inicio -> INICIO . LPAREN RPAREN LBRACE estatutos_aux RBRACE SEMICOLON

    LPAREN          shift and go to state 24


state 10

    (5) dec_var_cycle -> dec_var . dec_var_cycle
    (5) dec_var_cycle -> . dec_var dec_var_cycle
    (6) dec_var_cycle -> . empty
    (11) dec_var -> . simple_var
    (12) dec_var -> . array
    (13) dec_var -> . matrix
    (126) empty -> .
    (14) simple_var -> . VARIABLE type ARROW ID punto_simple_var simpleVarCycle SEMICOLON
    (21) array -> . RENGLON type ARROW ID LBRACKET CTEI RBRACKET punto_array arrayCycle SEMICOLON
    (25) matrix -> . TABLA type ARROW ID LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET punto_matrix matrixCycle SEMICOLON

    INICIO          reduce using rule 126 (empty -> .)
    FUNCION         reduce using rule 126 (empty -> .)
    ID              reduce using rule 126 (empty -> .)
    PORCADA         reduce using rule 126 (empty -> .)
    MIENTRAS        reduce using rule 126 (empty -> .)
    SI              reduce using rule 126 (empty -> .)
    IMPRIMIR        reduce using rule 126 (empty -> .)
    LEER            reduce using rule 126 (empty -> .)
    REGRESAR        reduce using rule 126 (empty -> .)
    RBRACE          reduce using rule 126 (empty -> .)
    VARIABLE        shift and go to state 17
    RENGLON         shift and go to state 18
    TABLA           shift and go to state 19

    dec_var                        shift and go to state 10
    dec_var_cycle                  shift and go to state 25
    empty                          shift and go to state 26
    simple_var                     shift and go to state 13
    array                          shift and go to state 14
    matrix                         shift and go to state 15

state 11

    (6) dec_var_cycle -> empty .
    (8) dec_func_cycle -> empty .

  ! reduce/reduce conflict for INICIO resolved using rule 6 (dec_var_cycle -> empty .)
    INICIO          reduce using rule 6 (dec_var_cycle -> empty .)
    FUNCION         reduce using rule 6 (dec_var_cycle -> empty .)

  ! INICIO          [ reduce using rule 8 (dec_func_cycle -> empty .) ]


state 12

    (7) dec_func_cycle -> dec_func . dec_func_cycle
    (7) dec_func_cycle -> . dec_func dec_func_cycle
    (8) dec_func_cycle -> . empty
    (29) dec_func -> . FUNCION dec_func_type ID punto_add_func LPAREN parameter RPAREN LBRACE dec_var_cycle estatutos_aux dec_func_regresar RBRACE SEMICOLON
    (126) empty -> .

    FUNCION         shift and go to state 16
    INICIO          reduce using rule 126 (empty -> .)

    dec_func                       shift and go to state 12
    dec_func_cycle                 shift and go to state 27
    empty                          shift and go to state 22

state 13

    (11) dec_var -> simple_var .

    VARIABLE        reduce using rule 11 (dec_var -> simple_var .)
    RENGLON         reduce using rule 11 (dec_var -> simple_var .)
    TABLA           reduce using rule 11 (dec_var -> simple_var .)
    INICIO          reduce using rule 11 (dec_var -> simple_var .)
    FUNCION         reduce using rule 11 (dec_var -> simple_var .)
    ID              reduce using rule 11 (dec_var -> simple_var .)
    PORCADA         reduce using rule 11 (dec_var -> simple_var .)
    MIENTRAS        reduce using rule 11 (dec_var -> simple_var .)
    SI              reduce using rule 11 (dec_var -> simple_var .)
    IMPRIMIR        reduce using rule 11 (dec_var -> simple_var .)
    LEER            reduce using rule 11 (dec_var -> simple_var .)
    REGRESAR        reduce using rule 11 (dec_var -> simple_var .)
    RBRACE          reduce using rule 11 (dec_var -> simple_var .)


state 14

    (12) dec_var -> array .

    VARIABLE        reduce using rule 12 (dec_var -> array .)
    RENGLON         reduce using rule 12 (dec_var -> array .)
    TABLA           reduce using rule 12 (dec_var -> array .)
    INICIO          reduce using rule 12 (dec_var -> array .)
    FUNCION         reduce using rule 12 (dec_var -> array .)
    ID              reduce using rule 12 (dec_var -> array .)
    PORCADA         reduce using rule 12 (dec_var -> array .)
    MIENTRAS        reduce using rule 12 (dec_var -> array .)
    SI              reduce using rule 12 (dec_var -> array .)
    IMPRIMIR        reduce using rule 12 (dec_var -> array .)
    LEER            reduce using rule 12 (dec_var -> array .)
    REGRESAR        reduce using rule 12 (dec_var -> array .)
    RBRACE          reduce using rule 12 (dec_var -> array .)


state 15

    (13) dec_var -> matrix .

    VARIABLE        reduce using rule 13 (dec_var -> matrix .)
    RENGLON         reduce using rule 13 (dec_var -> matrix .)
    TABLA           reduce using rule 13 (dec_var -> matrix .)
    INICIO          reduce using rule 13 (dec_var -> matrix .)
    FUNCION         reduce using rule 13 (dec_var -> matrix .)
    ID              reduce using rule 13 (dec_var -> matrix .)
    PORCADA         reduce using rule 13 (dec_var -> matrix .)
    MIENTRAS        reduce using rule 13 (dec_var -> matrix .)
    SI              reduce using rule 13 (dec_var -> matrix .)
    IMPRIMIR        reduce using rule 13 (dec_var -> matrix .)
    LEER            reduce using rule 13 (dec_var -> matrix .)
    REGRESAR        reduce using rule 13 (dec_var -> matrix .)
    RBRACE          reduce using rule 13 (dec_var -> matrix .)


state 16

    (29) dec_func -> FUNCION . dec_func_type ID punto_add_func LPAREN parameter RPAREN LBRACE dec_var_cycle estatutos_aux dec_func_regresar RBRACE SEMICOLON
    (32) dec_func_type -> . type
    (33) dec_func_type -> . SINREGRESAR
    (18) type -> . ENTERO
    (19) type -> . DECIMAL
    (20) type -> . LETRA

    SINREGRESAR     shift and go to state 30
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    LETRA           shift and go to state 33

    dec_func_type                  shift and go to state 28
    type                           shift and go to state 29

state 17

    (14) simple_var -> VARIABLE . type ARROW ID punto_simple_var simpleVarCycle SEMICOLON
    (18) type -> . ENTERO
    (19) type -> . DECIMAL
    (20) type -> . LETRA

    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    LETRA           shift and go to state 33

    type                           shift and go to state 34

state 18

    (21) array -> RENGLON . type ARROW ID LBRACKET CTEI RBRACKET punto_array arrayCycle SEMICOLON
    (18) type -> . ENTERO
    (19) type -> . DECIMAL
    (20) type -> . LETRA

    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    LETRA           shift and go to state 33

    type                           shift and go to state 35

state 19

    (25) matrix -> TABLA . type ARROW ID LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET punto_matrix matrixCycle SEMICOLON
    (18) type -> . ENTERO
    (19) type -> . DECIMAL
    (20) type -> . LETRA

    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    LETRA           shift and go to state 33

    type                           shift and go to state 36

state 20

    (2) programa -> PROGRAMA ID punto_programa COLON dec_var_cycle inicio .

    $end            reduce using rule 2 (programa -> PROGRAMA ID punto_programa COLON dec_var_cycle inicio .)


state 21

    (3) programa -> PROGRAMA ID punto_programa COLON dec_var_cycle dec_func_cycle . inicio
    (10) inicio -> . INICIO LPAREN RPAREN LBRACE estatutos_aux RBRACE SEMICOLON

    INICIO          shift and go to state 9

    inicio                         shift and go to state 37

state 22

    (8) dec_func_cycle -> empty .

    INICIO          reduce using rule 8 (dec_func_cycle -> empty .)


state 23

    (4) programa -> PROGRAMA ID punto_programa COLON dec_func_cycle inicio .

    $end            reduce using rule 4 (programa -> PROGRAMA ID punto_programa COLON dec_func_cycle inicio .)


state 24

    (10) inicio -> INICIO LPAREN . RPAREN LBRACE estatutos_aux RBRACE SEMICOLON

    RPAREN          shift and go to state 38


state 25

    (5) dec_var_cycle -> dec_var dec_var_cycle .

    INICIO          reduce using rule 5 (dec_var_cycle -> dec_var dec_var_cycle .)
    FUNCION         reduce using rule 5 (dec_var_cycle -> dec_var dec_var_cycle .)
    ID              reduce using rule 5 (dec_var_cycle -> dec_var dec_var_cycle .)
    PORCADA         reduce using rule 5 (dec_var_cycle -> dec_var dec_var_cycle .)
    MIENTRAS        reduce using rule 5 (dec_var_cycle -> dec_var dec_var_cycle .)
    SI              reduce using rule 5 (dec_var_cycle -> dec_var dec_var_cycle .)
    IMPRIMIR        reduce using rule 5 (dec_var_cycle -> dec_var dec_var_cycle .)
    LEER            reduce using rule 5 (dec_var_cycle -> dec_var dec_var_cycle .)
    REGRESAR        reduce using rule 5 (dec_var_cycle -> dec_var dec_var_cycle .)
    RBRACE          reduce using rule 5 (dec_var_cycle -> dec_var dec_var_cycle .)


state 26

    (6) dec_var_cycle -> empty .

    INICIO          reduce using rule 6 (dec_var_cycle -> empty .)
    FUNCION         reduce using rule 6 (dec_var_cycle -> empty .)
    ID              reduce using rule 6 (dec_var_cycle -> empty .)
    PORCADA         reduce using rule 6 (dec_var_cycle -> empty .)
    MIENTRAS        reduce using rule 6 (dec_var_cycle -> empty .)
    SI              reduce using rule 6 (dec_var_cycle -> empty .)
    IMPRIMIR        reduce using rule 6 (dec_var_cycle -> empty .)
    LEER            reduce using rule 6 (dec_var_cycle -> empty .)
    REGRESAR        reduce using rule 6 (dec_var_cycle -> empty .)
    RBRACE          reduce using rule 6 (dec_var_cycle -> empty .)


state 27

    (7) dec_func_cycle -> dec_func dec_func_cycle .

    INICIO          reduce using rule 7 (dec_func_cycle -> dec_func dec_func_cycle .)


state 28

    (29) dec_func -> FUNCION dec_func_type . ID punto_add_func LPAREN parameter RPAREN LBRACE dec_var_cycle estatutos_aux dec_func_regresar RBRACE SEMICOLON

    ID              shift and go to state 39


state 29

    (32) dec_func_type -> type .

    ID              reduce using rule 32 (dec_func_type -> type .)


state 30

    (33) dec_func_type -> SINREGRESAR .

    ID              reduce using rule 33 (dec_func_type -> SINREGRESAR .)


state 31

    (18) type -> ENTERO .

    ID              reduce using rule 18 (type -> ENTERO .)
    ARROW           reduce using rule 18 (type -> ENTERO .)


state 32

    (19) type -> DECIMAL .

    ID              reduce using rule 19 (type -> DECIMAL .)
    ARROW           reduce using rule 19 (type -> DECIMAL .)


state 33

    (20) type -> LETRA .

    ID              reduce using rule 20 (type -> LETRA .)
    ARROW           reduce using rule 20 (type -> LETRA .)


state 34

    (14) simple_var -> VARIABLE type . ARROW ID punto_simple_var simpleVarCycle SEMICOLON

    ARROW           shift and go to state 40


state 35

    (21) array -> RENGLON type . ARROW ID LBRACKET CTEI RBRACKET punto_array arrayCycle SEMICOLON

    ARROW           shift and go to state 41


state 36

    (25) matrix -> TABLA type . ARROW ID LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET punto_matrix matrixCycle SEMICOLON

    ARROW           shift and go to state 42


state 37

    (3) programa -> PROGRAMA ID punto_programa COLON dec_var_cycle dec_func_cycle inicio .

    $end            reduce using rule 3 (programa -> PROGRAMA ID punto_programa COLON dec_var_cycle dec_func_cycle inicio .)


state 38

    (10) inicio -> INICIO LPAREN RPAREN . LBRACE estatutos_aux RBRACE SEMICOLON

    LBRACE          shift and go to state 43


state 39

    (29) dec_func -> FUNCION dec_func_type ID . punto_add_func LPAREN parameter RPAREN LBRACE dec_var_cycle estatutos_aux dec_func_regresar RBRACE SEMICOLON
    (34) punto_add_func -> .

    LPAREN          reduce using rule 34 (punto_add_func -> .)

    punto_add_func                 shift and go to state 44

state 40

    (14) simple_var -> VARIABLE type ARROW . ID punto_simple_var simpleVarCycle SEMICOLON

    ID              shift and go to state 45


state 41

    (21) array -> RENGLON type ARROW . ID LBRACKET CTEI RBRACKET punto_array arrayCycle SEMICOLON

    ID              shift and go to state 46


state 42

    (25) matrix -> TABLA type ARROW . ID LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET punto_matrix matrixCycle SEMICOLON

    ID              shift and go to state 47


state 43

    (10) inicio -> INICIO LPAREN RPAREN LBRACE . estatutos_aux RBRACE SEMICOLON
    (47) estatutos_aux -> . estatutos estatutos_aux
    (48) estatutos_aux -> . empty
    (40) estatutos -> . asignar
    (41) estatutos -> . llamada_func
    (42) estatutos -> . ciclo_for
    (43) estatutos -> . ciclo_while
    (44) estatutos -> . condicion
    (45) estatutos -> . imprimir
    (46) estatutos -> . leer
    (126) empty -> .
    (49) asignar -> . variable ASSIGN push_op_igual hyper_exp check_op_igual SEMICOLON
    (115) llamada_func -> . ID LPAREN llamadaCYCLE RPAREN SEMICOLON
    (61) ciclo_for -> . PORCADA exp EN exp LBRACE estatutos_aux RBRACE SEMICOLON
    (57) ciclo_while -> . MIENTRAS punto_inicio_while LPAREN hyper_exp RPAREN punto_medio_while LBRACE estatutos_aux RBRACE punto_fin_while SEMICOLON
    (62) condicion -> . SI LPAREN hyper_exp RPAREN punto_si LBRACE estatutos_aux RBRACE punto_fin_si sinoCondicion SEMICOLON
    (120) imprimir -> . IMPRIMIR LPAREN imprimir_aux RPAREN SEMICOLON
    (56) leer -> . LEER variable SEMICOLON
    (52) variable -> . ID variable_aux

    RBRACE          reduce using rule 126 (empty -> .)
    ID              shift and go to state 59
    PORCADA         shift and go to state 60
    MIENTRAS        shift and go to state 61
    SI              shift and go to state 62
    IMPRIMIR        shift and go to state 63
    LEER            shift and go to state 64

    estatutos_aux                  shift and go to state 48
    estatutos                      shift and go to state 49
    empty                          shift and go to state 50
    asignar                        shift and go to state 51
    llamada_func                   shift and go to state 52
    ciclo_for                      shift and go to state 53
    ciclo_while                    shift and go to state 54
    condicion                      shift and go to state 55
    imprimir                       shift and go to state 56
    leer                           shift and go to state 57
    variable                       shift and go to state 58

state 44

    (29) dec_func -> FUNCION dec_func_type ID punto_add_func . LPAREN parameter RPAREN LBRACE dec_var_cycle estatutos_aux dec_func_regresar RBRACE SEMICOLON

    LPAREN          shift and go to state 65


state 45

    (14) simple_var -> VARIABLE type ARROW ID . punto_simple_var simpleVarCycle SEMICOLON
    (17) punto_simple_var -> .

    COMMA           reduce using rule 17 (punto_simple_var -> .)
    SEMICOLON       reduce using rule 17 (punto_simple_var -> .)

    punto_simple_var               shift and go to state 66

state 46

    (21) array -> RENGLON type ARROW ID . LBRACKET CTEI RBRACKET punto_array arrayCycle SEMICOLON

    LBRACKET        shift and go to state 67


state 47

    (25) matrix -> TABLA type ARROW ID . LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET punto_matrix matrixCycle SEMICOLON

    LBRACKET        shift and go to state 68


state 48

    (10) inicio -> INICIO LPAREN RPAREN LBRACE estatutos_aux . RBRACE SEMICOLON

    RBRACE          shift and go to state 69


state 49
